--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+:root {
+  --bg-primary: #0d1323;
+  --bg-secondary: #1d204b;
+  --bg-secondary-active: #34397b;
+  --bg-terciary: #5746ea;
+  --text-primary: #ffffff;
+  --text-secondary: #525597;
+}
+
+
+body {
+  font-family: 'Rubik', sans-serif !important;
+}
